force-app/main/default/objects/PS_ASU_SP_COMMNT_V__x.object
<CustomObject>
    <fields>
        <fullName>ADMIN_FUNCTION__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT.ADMIN_FUNCTION</description>
        <externalDeveloperName>ADMIN_FUNCTION</externalDeveloperName>
        <label>Department Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADMIN_ROLENAME__c</fullName>
        <description>Data sourced from PS_ADM_FUNCTN_TBL.DESCR</description>
        <externalDeveloperName>ADMIN_ROLENAME</externalDeveloperName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMENTS__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT.COMMENTS</description>
        <externalDeveloperName>COMMENTS</externalDeveloperName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COMMENT_DTTM__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT.COMMENT_DTTM</description>
        <externalDeveloperName>COMMENT_DTTM</externalDeveloperName>
        <label>Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COMNT_ID__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT.COMNT_ID</description>
        <externalDeveloperName>CMNT_ID</externalDeveloperName>
        <label>Commenter EMPLID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_PERSON_COMMENT.COMMON_ID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Comment (external)</relationshipLabel>
        <relationshipName>Comment_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <description>Data sourced from PS_NAMES_VW.NAME</description>
        <externalDeveloperName>NAME</externalDeveloperName>
        <label>Commenter Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1I2Is4HPafEX2tIYdDex_ECYyaFBqLfjEUya-cwOfAW4/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_COMMNT_V</externalName>
    <label>Comment (external)</label>
    <pluralLabel>Comment (external)</pluralLabel>
</CustomObject>