force-app/main/default/objects/PS_ASU_SP_COMMNT_V__x/fields/CMNT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CMNT_CATEGORY__c</fullName>
    <externalDeveloperName>CMNT_CATEGORY</externalDeveloperName>
    <label>Comment Category</label>
    <length>8</length>
    <type>Text</type>
</CustomField>